# BVHTest

./: .clang-format  .gitattributes  .gitignore  .gitmodules  BVHTest.files  BVHTest.includes  BVHTestCfg.hpp.in  README.md  checkFormat.sh  enumGenCfg.json  meson.build  meson_options.txt  perf.sh
lib/: meson.build
lib/base/: BVH.cpp  BVH.hpp  BVHPatch.hpp  CameraBase.cpp  CameraBase.hpp  Command.cpp  Command.hpp  Config.cpp  Config.hpp  Image.hpp  Ray.cpp  Ray.hpp  State.cpp  State.hpp  StatusDump.cpp  StatusDump.hpp  StringHash.hpp
lib/builder/: Bittner13.cpp  Bittner13.hpp  Bittner13CUDA.cu  Bittner13CUDA.hpp  Bittner13GPU.cpp  Bittner13GPU.hpp  Bittner13Par.cpp  Bittner13Par.hpp  BuilderBase.cpp  BuilderBase.hpp  CUDAHeap.hpp  HLBVH.cpp  HLBVH.hpp  HLBVH_CUDA.cu  HLBVH_CUDA.hpp  LBVH.cpp  LBVH.hpp  LBVH_CUDA.cu  LBVH_CUDA.hpp  Median.cpp  Median.hpp  OptimizerBase.cpp  OptimizerBase.hpp  Wald07.cpp  Wald07.hpp  bucketSelect.cu
lib/camera/: Camera.cpp  Camera.hpp
lib/cuda/: CopyToGPU.cpp  CopyToGPU.hpp  CopyToHost.cpp  CopyToHost.hpp  bucketSelect.cu  cudaFN.cu  cudaFN.hpp
lib/io/: BVHExport.cpp  BVHExport.hpp  BVHImport.cpp  BVHImport.hpp  CameraExport.cpp  CameraExport.hpp  CameraImport.cpp  CameraImport.hpp  ExportMesh.cpp  ExportMesh.hpp  ImportMesh.cpp  ImportMesh.hpp  Load.cpp  Load.hpp  LoadAdd.cpp  LoadAdd.hpp  WriteData.cpp  WriteData.hpp  WriteImage.cpp  WriteImage.hpp
lib/misc/: Camera.cpp  Camera.hpp  OMPReductions.hpp  Sleep.cpp  Sleep.hpp  Validate.cpp  Validate.hpp
lib/tracer/: BruteForceTracer.cpp  BruteForceTracer.hpp  CPUTracer.cpp  CPUTracer.hpp  CUDAKernels.cu  CUDAKernels.hpp  CUDATracer.cpp  CUDATracer.hpp  TracerBase.cpp  TracerBase.hpp
lib/viewer/: BVHRenderer.cpp  BVHRenderer.hpp  LiveTracer.cpp  LiveTracer.hpp  MeshRenderer.cpp  MeshRenderer.hpp  RendererBase.cpp  RendererBase.hpp  Viewer.cpp  Viewer.hpp  Window.cpp  Window.hpp  glcorearb.h
src/: main.cpp  meson.build
src/BVHTest/: Config.cpp  Config.hpp  main.cpp  meson.build
src/base/: Configurable.cpp  Configurable.hpp  meson.build
test/: main.cpp  meson.build
